# Hotaru

./: .gitignore  Build.bat  CMakeLists.txt  CMakeUserPresets.json  ReadME.txt  Release.bat  conanfile.txt  main.cpp  test.cpp
filagui/src/: ImGuiExtensions.cpp  ImGuiHelper.cpp
filagui/src/materials/: output.filemat  uiBlit.matd
header/: command.h  console.h  filament_pch.h  gpu.h  observer.h  singleton.h  window.h
header/Hotaru/Structure/: hotaru_ent.h  window_context.h
source/: console.cpp  gpu.cpp  window.cpp
